INTYGFV-16752: Added pdf logic for fk7809 and fixed logic related to multiple pages pdf